# cmps

./: CMakeLists.txt  README.md  cmps.pc.in  cmpsConfig.cmake.in  mps.pc.in  mpsConfig.cmake.in
include/: cmps_align.h  cmps_include.h  cmps_instruction_set.h  mps_align.h  mps_config.h  mps_include.h  mps_instruction_set.h
src/: arrays.c  arrays.h  matrices.c  matrices.h  structures.h  vectors.c  vectors.h
